# ichipro-syllabus-exporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-syllabus.yml
public/: ichipiro-syllabus.json
src/: convert.py  scrap.py
src/lib/: target.py
tests/: test_lib_target.py
tools/: README.md  pyproject.toml
tools/src/: main.py  scrap.py
tools/src/csv/: 20240129121705.csv
