[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m-tsuru", email = "147146974+m-tsuru@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "tools:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning",]
